config/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    project: $name
    stage: $stage
    version: $version
  name: $name
spec:
  replicas: 1
  selector:
    matchLabels:
      project: $name
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        project: $name
        stage: $stage
        version: $version
    spec:
      containers:
      - image: $image
        imagePullPolicy: IfNotPresent
        name: $name
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 0.2
            memory: 350Mi
          requests:
            cpu: 0.1
            memory: 350Mi
        terminationMessagePath: /dev/termination-log
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 4
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 20
          failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 2
