config/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    project: $name
    version: $version
  name: $name
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    project: $name
  sessionAffinity: None
  type: ClusterIP
