config/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: $name
spec:
  rules:
  - host: cellstarter.sprinthive.tech
    http:
      paths:
      - backend:
          serviceName: $name
          servicePort: 80
  tls:
  - hosts:
    - cellstarter.sprinthive.tech
    secretName: $name-tls
status:
  loadBalancer: {}
